--- a/app/view/pc/styles/cssLib/reset.scss
+++ b/app/view/pc/styles/cssLib/reset.scss
@@ -86,7 +86,7 @@ body {
     font-family: "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 
     color: #333333;
-    background-color: #f5f5f7;
+    background-color: #fff;
 }
 
 /* 页面主体内容部分所占的宽度和位置居中 */
