--- a/app/view/pc/styles/index.scss
+++ b/app/view/pc/styles/index.scss
@@ -1,5 +1,5 @@
 $main-color: #fdc5e0;
-$main-padding: 30px 50px;
+$main-padding: 0 50px 30px;
 
 .header {
     height: 130px;
@@ -65,7 +65,7 @@ $main-padding: 30px 50px;
 }
 
 .title {
-    margin-bottom: 30px;
+    padding: 30px 0 30px;
 
     font-size: 30px;
     text-align: center;
@@ -153,7 +153,7 @@ $main-padding: 30px 50px;
 }
 
 .footer {
-    padding: 150px 0 100px;
+    padding: 30px 0 100px;
 
     .footer-top {
         background-position: center;
