<U>首页页面开发

--- a/app/view/pc/styles/cssLib/reset.scss
+++ b/app/view/pc/styles/cssLib/reset.scss
@@ -35,13 +35,13 @@ i {
     font-style: normal;
 }
 
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
-input[type="search"],
-button {
-    appearance: none;
-}
+// input[type="submit"],
+// input[type="reset"],
+// input[type="button"],
+// input[type="search"],
+// button {
+//     appearance: none;
+// }
 
 /* input [type=search] 搜索框去掉默认边框和旁边的小图标 */
 input::-webkit-search-cancel-button {
@@ -59,7 +59,7 @@ a {
     text-decoration: none;
     outline: none;
 
-    blr: expression(this.onFocus=this.blur());
+    // blr: expression(this.onFocus=this.blur());
 
     &:focus,
     &:link {
@@ -73,9 +73,9 @@ a {
         text-decoration: none;
     }
 
-    &:active {
-        star: expression(this.onFocus=this.blur());
-    }
+    // &:active {
+    //     star: expression(this.onFocus=this.blur());
+    // }
 }
 
 /* html tag中比较常用的设定 */
