--- a/app/view/pc/styles/activity.scss
+++ b/app/view/pc/styles/activity.scss
@@ -1,20 +1,130 @@
-$main-color: #fdc5e0;
+$main-color: #f068a9;
 $main-padding: 0 50px 30px;
+$black-color: #101213;
+$gray-color: #5e6468;
+$t-hover-color: #ee534e;
 
-.activity-ing {
+.activity-ing-hot {
     margin-top: 30px;
 
     .activity-list {
         margin: $main-padding;
 
-        .item-img {
+        .list-item {
             margin-bottom: 30px;
+            width: 100%;
+            height: 300px;
 
             background-position: center;
             background-size: cover;
+        }
+    }
+}
 
-            width: 500px;
-            height: 300px;
+.activity-ing {
+    margin-top: 30px;
+    background-color: #ebebeb;
+
+    .activity-list {
+        margin: $main-padding;
+
+        .list-item {
+            position: relative;
+
+            display: block;
+
+            margin-bottom: 50px;
+            height: 450px;
+            width: 520px;
+
+            border-radius: 5px;
+
+            .list-img-div {
+                position: relative;
+
+                width: 520px;
+                height: 280px;
+
+                overflow: hidden;
+
+                cursor: pointer;
+
+                .item-img {
+                    width: 520px;
+                    height: 280px;
+
+                    border-radius: 5px 5px 0 0;
+
+                    background-position: center center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                }
+
+                .item-cover {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+
+                    border-radius: 5px;
+
+                    background-color: rgba(102, 102, 102, 0.44);;
+                
+                    opacity: 0;
+                }
+            }
+
+            .list-img-div:hover {
+                .item-img {
+                    transform: rotate(0deg) scale(1.2) translate(0%,0%);
+
+                    transition: All 8s ease;
+                }
+
+                .item-cover {
+                    opacity: 1;
+
+                    transition: All 1s ease;
+                }
+            }
+
+            .item-text {
+                margin-top: 10px;
+                padding: 10px;
+                
+                .t-title {
+                    color: $black-color;
+                }
+
+                .t-title:hover {
+                    color: $t-hover-color;
+                }
+
+                .t-describe {
+                    margin-top: 15px;
+
+                    color: $gray-color;
+                }
+
+                .t-type {
+                    position: absolute;
+                    bottom: 10px;
+
+                    color: $black-color;
+
+                    .icon {
+                        font-size: 30px;
+                    }
+                }
+            }
+        }
+
+        .list-item:hover {
+            box-shadow:  0px 17px 50px 0px rgba(0,0,0,0.188235);
+            
+            transform: translate3d(0px,-2px,0px);
+            transition: all 0.3s ease;
         }
     }
 }
@@ -22,19 +132,80 @@ $main-padding: 0 50px 30px;
 .activity-ed {
     margin-top: 30px;
     
-    background-color: #ebebeb;
-
+    
     .activity-list {
         margin: $main-padding;
 
-        .item-img {
-            margin-bottom: 30px;
+        .list-item {
+            position: relative;
 
-            background-position: center;
-            background-size: cover;
+            display: block;
 
-            width: 500px;
-            height: 300px;
+            margin-bottom: 50px;
+            height: 330px;
+            width: 330px;
+
+            border-radius: 5px;
+
+            .list-img-div {
+                position: relative;
+
+                width: 330px;
+                height: 320px;
+
+                overflow: hidden;
+
+                cursor: pointer;
+
+                .item-img {
+                    margin: 10px;
+                    width: 310px;
+                    height: 350px;
+
+                    border-radius: 5px 5px 0 0;
+
+                    background-position: center center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                }
+            }
+
+            .item-text {
+                margin-top: 10px;
+                padding: 10px;
+                
+                .t-title {
+                    color: $black-color;
+                }
+
+                .t-title:hover {
+                    color: $t-hover-color;
+                }
+
+                .t-describe {
+                    margin-top: 15px;
+
+                    color: $gray-color;
+                }
+
+                .t-type {
+                    position: absolute;
+                    bottom: 10px;
+
+                    color: $black-color;
+
+                    .icon {
+                        font-size: 30px;
+                    }
+                }
+            }
+        }
+
+        .list-item:hover {
+            box-shadow:  0px 17px 50px 0px rgba(0,0,0,0.188235);
+            
+            transform: translate3d(0px,-2px,0px);
+            transition: all 0.3s ease;
         }
     }
 }
